# Solar-panal-sutbaility-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: gitkeep.txt
docs/: api_documentation.md  data_acquisition_guide.md
notebooks/: 02_algorithm_development.ipynb  03_visualization_demo.ipynb
outputs/maps/: kdtree_neighbor_search.html  solar_interactive_map.html  top_100_buildings.html  top_20_buildings.html
outputs/reports/: summary_report.json  summary_report_amsterdam.json  top_100_priority_buildings_amsterdam.csv  top_20_priority_buildings.csv
src/: __init__.py  api.py  data_acquisition.py  geometry.py  ranking.py  shading.py  solar.py  spatial_search.py  utils.py  visualization.py
tests/: conftest.py  test_api.py  test_data_acquisition.py  test_geometry.py  test_ranking.py  test_shading.py  test_solar.py  test_spatial_search.py
tools/: debug_visualization.py
